--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ html, body{
 
 .container-fluid{
     vertical-align: bottom;
+    height:fit-content;
 }
 
 .container-fluid .text{
@@ -104,9 +105,10 @@ h3{
 }
 
 #tamu{
-    width:20%;
+    width:30%;
     position: relative;
-    top: 200px;
+    top: 300px;
+    left: 300px;
 } 
 /* FOR DEBUGGING 
 * {
