--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
 }
 
 html, body{
+    scroll-behavior: smooth;
     background-color: var(white);
     height: 100%;
     width: 100%;
@@ -36,6 +37,7 @@ html, body{
 
 #header{
     margin-top: 100px;
+    margin-bottom: -700px;
 }
 
 #headshot{
@@ -68,8 +70,8 @@ h2{
 
 #linkedIn{
     position: relative;
-    left: 1100px;
-    bottom: 600px;
+    left: 1096px;
+    bottom: 620px;
     border: none;
     appearance: none;
     background-color: inherit;
@@ -77,12 +79,12 @@ h2{
 
 #linkedIn img{
     display: block;
-    width: 2%;
+    width: 4%;
 }
 
 #github{
     position: relative;
-    left: 1105px;
+    left: 1104px;
     bottom: 590px;
     border: none;
     appearance: none;
@@ -91,7 +93,7 @@ h2{
 
 #github img{
     display: block;
-    width: 2%;
+    width: 3%;
 }
 
 h3{
@@ -100,16 +102,32 @@ h3{
 }
 
 .aboutme .text1{
+    margin-top: 50px;
     margin-left: 800px;
     color: gray
 }
 
 #tamu{
-    width:30%;
+    width:40%;
     position: relative;
-    top: 300px;
-    left: 300px;
+    top: 500px;
+    left: 150px;
 } 
+
+.download-button{
+    display: flex;
+    width:11%;
+    margin-left: 800px;
+    background-color: rgb(80,0,0);
+    text-align: left;
+}
+.download-button:hover{
+    background-color: rgb(68, 1, 1);
+}
+.download-button img{
+    width: 10%;
+    float:inline-start;
+}
 /* FOR DEBUGGING 
 * {
     background: #000 !important;
